Add top section map styles

--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -187,6 +187,20 @@
 	.top-section__content {
 		opacity: 0;
 	}
+
+	.top-section__map {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+}
+
+@media (max-width: 1200px) {
+	.top-section__map {
+		display: none;
+	}
 }
 
 /*
