Edit tags MAIN, H1-H3 default styles

--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -32,6 +32,12 @@ main {
 	padding-top: 248px;
 }
 
+@media (max-width: 1200px) {
+	main {
+		padding-top: 124px;
+	}
+}
+
 picture::selection,
 img::selection,
 table th::selection,
@@ -146,6 +152,34 @@ h3 {
 	h1,
 	h2 {
 		margin-bottom: 25px;
+	}
+}
+
+@media (max-width: 576px) {
+	h1 {
+		font-size: fsz(30, 12);
+	}
+
+	h2 {
+		font-size: fsz(27, 12);
+	}
+
+	h3 {
+		font-size: fsz(20, 12);
+	}
+}
+
+@media (max-width: 360px) {
+	h1 {
+		font-size: fsz(27, 12);
+	}
+
+	h2 {
+		font-size: fsz(24, 12);
+	}
+
+	h3 {
+		font-size: fsz(17, 12);
 	}
 }
 
