--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -79,6 +79,20 @@
 	}
 }
 
+@media (max-width: 1024px) {
+	.content-4 {
+		flex-direction: column;
+	}
+
+	.content-1,
+	.content-2,
+	.content-3,
+	.content-4,
+	.content-5 {
+		gap: 40px;
+	}
+}
+
 /*
 =================================
 	TOP SECTION
@@ -262,7 +276,6 @@
 
 .about-1__aside {
 	h3 {
-		margin-bottom: 33px;
 		padding-left: 30px;
 		font-size: fsz(20, 12);
 		color: $c5;
@@ -280,6 +293,12 @@
 		padding-top: 50px;
 	}
 
+	.about-1__aside {
+		h3 {
+			margin-bottom: 33px;
+		}
+	}
+
 	.about-2 {
 		background: url(../img/map.svg) no-repeat 50% 100%;
 		background-size: contain;
@@ -295,6 +314,47 @@
 
 	.about-1__aside {
 		padding-right: 40px;
+	}
+}
+
+@media (max-width: 1024px) {
+	.about-1__aside {
+		width: calc(min(500px, 100%));
+		align-self: center;
+	}
+
+	.about-1__main {
+		p {
+			&:last-of-type {
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+
+@media (max-width: 640px) {
+	.about-1 {
+		background-size: calc(100% - 20px) auto;
+	}
+}
+
+@media (max-width: 576px) {
+	.about-1__aside {
+		h3 {
+			padding-left: 20px;
+		}
+	}
+}
+
+@media (max-width: 360px) {
+	.about-1 {
+		background-size: calc(100% - 15px) auto;
+	}
+
+	.about-1__aside {
+		h3 {
+			padding-left: 15px;
+		}
 	}
 }
 
