--- a/src/scss/_lists.scss
+++ b/src/scss/_lists.scss
@@ -42,3 +42,27 @@
 .list-6 {
 	grid-template-columns: repeat(3, 1fr);
 }
+
+@media (max-width: 768px) {
+	.list-6 {
+		grid-template-columns: repeat(1, 1fr);
+	}
+}
+
+@media (max-width: 576px) {
+
+	.list-2,
+	.list-4,
+	.list-6 {
+		gap: 20px;
+	}
+}
+
+@media (max-width: 360px) {
+
+	.list-2,
+	.list-4,
+	.list-6 {
+		gap: 15px;
+	}
+}
