MODULE PERSONS LIST: Edit mobile styles

--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -1029,6 +1029,14 @@
 			padding-top: 12px;
 			padding-left: mp(15, 158);
 		}
+
+		strong {
+			font-size: fsz(13, 12);
+		}
+
+		span {
+			font-size: fsz(10, 12);
+		}
 	}
 }
 
