--- a/src/scss/_lists.scss
+++ b/src/scss/_lists.scss
@@ -43,26 +43,54 @@
 	grid-template-columns: repeat(3, 1fr);
 }
 
+@media (max-width: 970px) {
+	.list-1 {
+		gap: 40px mp(40, 860);
+	}
+}
+
 @media (max-width: 768px) {
+
+	.list-1,
 	.list-6 {
 		grid-template-columns: repeat(1, 1fr);
+	}
+
+	.list-2,
+	.list-5 {
+		grid-template-columns: repeat(3, 1fr);
 	}
 }
 
 @media (max-width: 576px) {
 
+	.list-1,
 	.list-2,
 	.list-4,
 	.list-6 {
 		gap: 20px;
 	}
+
+	.list-5 {
+		gap: 37px 20px;
+	}
+
+	.list-2,
+	.list-5 {
+		grid-template-columns: repeat(2, 1fr);
+	}
 }
 
 @media (max-width: 360px) {
 
+	.list-1,
 	.list-2,
 	.list-4,
 	.list-6 {
 		gap: 15px;
+	}
+
+	.list-5 {
+		gap: 27px 15px;
 	}
 }
