--- a/src/layouts/header.html
+++ b/src/layouts/header.html
@@ -27,7 +27,8 @@
 			</div>
 			<div class="header__add">
 				<div>
-					<button class="btn btn-default header__btn">Долучитись до платформи</button>
+					<button class="btn btn-default header__btn modal-btn" data-modal-btn="modal-1">Долучитись до
+						платформи</button>
 				</div>
 				<div>
 					<ul class="header__lang lang">
