FOOTER: Add attributes for modal btn

--- a/src/layouts/footer.html
+++ b/src/layouts/footer.html
@@ -28,7 +28,7 @@
 		</div>
 		<div class="footer__add">
 			<div>
-				<button class="btn btn-default">Долучитись до платформи</button>
+				<button class="btn btn-default modal-btn" data-modal-btn="modal-1">Долучитись до платформи</button>
 			</div>
 			<div>
 				<span class="copyright">© Copyright 2023. UAUK</span>
