--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -6,7 +6,7 @@
 	width: 100%;
 	height: 100%;
 	padding: 20px;
-	background-color: rgba($cb, 0.9);
+	background-color: rgba($c2, 0.5);
 	text-align: center;
 	visibility: hidden;
 	opacity: 0;
@@ -35,13 +35,14 @@
 
 .modal__content {
 	position: relative;
-	width: calc(min(800px, 100%));
+	width: calc(min(480px, 100%));
 	overflow: hidden;
 	max-height: calc(100vh - 40px);
-	padding: 45px 3.33% 50px 3.33%;
+	padding: 50px;
 	overflow-y: auto;
 	overscroll-behavior-y: contain;
 	background-color: $c1;
+	border-radius: 5px;
 	text-align: left;
 	opacity: 0;
 	transform: scale(0);
@@ -134,16 +135,14 @@
 		padding: 20px;
 	}
 
-	.modal__content {
-		max-height: calc(100vh - 30px);
-		padding: 35px 20px 40px 20px;
+	.modal__content,
+	.modal-style-1 .modal__content {
+		padding-left: 20px;
+		padding-right: 20px;
 	}
 
-	.modal-style-1 {
-		.modal__content {
-			padding-left: 20px;
-			padding-right: 20px;
-		}
+	.modal__content {
+		max-height: calc(100vh - 30px);
 	}
 }
 
