--- a/src/scss/_lists.scss
+++ b/src/scss/_lists.scss
@@ -3,7 +3,8 @@
 .list-3,
 .list-4,
 .list-5,
-.list-6 {
+.list-6,
+.list-7 {
 	display: grid;
 }
 
@@ -14,7 +15,8 @@
 
 .list-2,
 .list-4,
-.list-6 {
+.list-6,
+.list-7 {
 	gap: 35px;
 }
 
@@ -31,7 +33,8 @@
 	}
 }
 
-.list-4 {
+.list-4,
+.list-7 {
 	grid-template-columns: repeat(2, 1fr);
 }
 
@@ -79,6 +82,11 @@
 	.list-5 {
 		grid-template-columns: repeat(2, 1fr);
 	}
+
+	.list-7 {
+		grid-template-columns: repeat(1, 1fr);
+		gap: 35px 20px;
+	}
 }
 
 @media (max-width: 360px) {
@@ -92,5 +100,9 @@
 
 	.list-5 {
 		gap: 27px 15px;
+	}
+
+	.list-7 {
+		gap: 35px 15px;
 	}
 }
