Add new colors in variables

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,6 +13,9 @@ $c10: #F6F6F6;
 $c11: #23A0DD;
 $c12: #4867AA;
 $c13: #F41ABA;
+$c14: #FAFAFA;
+$c15: #1BD741;
+$c16: #B48327;
 
 //== TYPOGRAPHY
 $fb: 'OpenSans', 'Helvetica CY', 'Nimbus Sans L', sans-serif;
